--- a/style.css
+++ b/style.css
@@ -15,19 +15,30 @@
   font-size: 18px;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font: roboto;
+}
+
 a {
   text-decoration: none;
   color: white;
+  margin: 0;
+  padding: 0;
 }
 
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
   font-size: 48px;
   font-weight: bolder;
   color: #F9FAF8;
+  margin: 0;
 }
 
 .header-logo {
@@ -54,4 +65,59 @@ h2 {
   font-style: italic;
   font-weight: lighter;
   color: #1F2937;
+}
+
+.full-page {
+  display: flex;
+  flex-direction: column;
+}
+
+.top-bar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  gap: 50px;
+}
+
+.header-links {
+  display: flex;
+  gap: 12px;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 400px;
+}
+
+button {
+  width: 100px;
+  height: 30px;
+  border-color: white;
+  color: white;
+  font-weight: bold;
+}
+
+.hero-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
+
+}
+
+p {
+  margin: 0;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 16px;
+  padding-bottom: 80px;
+  gap: 32px;
 }
