--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ h2 {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  gap: 50px;
+  gap: 150px;
 }
 
 .header-links {
@@ -91,6 +91,7 @@ h2 {
   flex-wrap: wrap;
   justify-content: space-around;
   width: 400px;
+  gap: 8px;
 }
 
 button {
@@ -106,7 +107,6 @@ button {
   justify-content: space-around;
   flex-wrap: wrap;
   align-items: center;
-
 }
 
 p {
@@ -120,4 +120,8 @@ p {
   padding: 16px;
   padding-bottom: 80px;
   gap: 32px;
+}
+
+.thumb {
+  padding-right: 100px;
 }
